# GithubIssueCalenderSync

./: .gitignore  github_client.py  main.py  pyproject.toml  readme.md  register-task.ps1
src/: config.py  google_tasks_client.py  syncer.py
