[project]
name = "github-issue-calendar-sync"
version = "0.1.0"
description = "Sync GitHub issues to Google Tasks"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
sync = "main:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
